# ESP32-S3

./: README.md
02_demo_keydriver/: partitions-16Mib.csv
02_demo_keydriver/components/Bsp/: CMakeLists.txt
02_demo_keydriver/components/Bsp/key_deteced/: key_common.h  key_config.c  key_driver.h
02_demo_keydriver/main/: CMakeLists.txt  main.c
03_demo_I2C/: CMakeLists.txt
03_demo_I2C/components/Bsp/: CMakeLists.txt
03_demo_I2C/components/Bsp/I2C/: I2C_Driver.c  I2C_Driver.h
03_demo_I2C/components/Bsp/PCF85063/: PCF85063.c  PCF85063.h
03_demo_I2C/components/Bsp/key_deteced/: key_config.h  key_detector.c  key_driver.c
03_demo_I2C/main/: main.c
Boot-Key/: CMakeLists.txt
Boot-Key/components/key_deteced/: key_detector.c  key_driver.h  readme.md
Boot-Key/main/: CMakeLists.txt  hello_world_main.c
key_driver_demo/components/key_deteced/: CMakeLists.txt  key_common.h  key_config.c  key_config.h  key_detector.h  key_driver.c
o1_demo_basic/: CMakeLists.txt
o1_demo_basic/components/Bsp/: CMakeLists.txt
o1_demo_basic/components/Bsp/LED/: led.h
